* Added vlan filter in getNodeInfoForAutoReg and update/create person even if the device has been autoreg
* Refactor the vlan filter code to reduce code duplication
* Added IMG path configuration parameter in admin
* The ability to restricts the roles, access levels and access durations for an admin users based on their admin role/access level

Bug Fixes
+++++++++

* Fix old MAC addresses being left on port-security enabled ports in a RADIUS + port-security environment
* Fix firewall rule that allows httpd.portal to be reached on management IP when pre-registration enabled
* Fix creating a new file from the Portal Profile GUI in a subdirectory
* Improved log rotation handling
* Fix previewing templates in the admin GUI
* Fix bulk applying of roles and violations in the admin GUI
* Fix importing of nodes when no pid is given
* Added a cleanup of trailing and leading spaces of the posted username during the login

Version 4.5.1 released on 2014-11-10
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New Features
++++++++++++

* Added compliance enforcement to OPSWAT GEARS provisioner

Enhancements
++++++++++++

* Make Cisco web authentication sessions use less memory
* Internationalized the provisioners templates

Bug Fixes
+++++++++

* Fix node pagination when sorting
* Fix provisioners that were not enforced on external authentication sources
* Fix IBM and Symantec provisioners configuration form

Version 4.5.0 released on 2014-10-22
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New Features
++++++++++++

* Added provisioning support for Symantec SEPM, MobileIron and OPSWAT
* Barracuda Networks firewall integration for Single Sign-On
* pfmon can now run tasks on different intervals
* Added a way to reevaluate the access of a node from the admin interface
* Added a "Blackhole" authentication source 
* Added a new violation to enforce provisioning of agents
* Violation can now be delayed
* Added portal profile filter based on switch-port couple

Enhancements
++++++++++++
