@@ -349,6 +349,7 @@ CREATE TABLE temporary_password (
 --
 
 INSERT INTO `person` (pid,notes) VALUES ("admin","Default Admin User - do not delete");
+INSERT INTO `person` (pid,notes) VALUES ("default","Default User - do not delete");
 INSERT INTO temporary_password (pid, password, valid_from, expiration, access_duration, access_level, category) VALUES ('admin', 'admin', NOW(), '2038-01-01', NULL, 'ALL', NULL);
 
 --
