@@ -35,6 +35,7 @@ Enhancements
 * Refactor the vlan filter code to reduce code duplication
 * Added IMG path configuration parameter in admin
 * The ability to restricts the roles, access levels and access durations for an admin users based on their admin role/access level
+* Added a 'default' default user in replacement of the admin one (we keep the admin default but we now defaultly register nodes using the 'default' one)
 
 Bug Fixes
 +++++++++
